Fixed newsletter on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,7 @@ header.top #nav .nav-li a{
 #home main{
 	min-height: 100%;
 	z-index: 5;
+	padding-top: 50px;
 }
 
 #home main #go{
@@ -502,7 +503,7 @@ header.top #nav .nav-li a{
 	background: #F1F2E2;
 	z-index: 5;
 	text-align: center;
-	padding: 30px 20px;
+	padding: 30px 15px;
 }
 
 #home #newsletter-div input{
@@ -512,11 +513,13 @@ header.top #nav .nav-li a{
 	border: 0;
 	line-height: 20px;
 	vertical-align: top;
+	width: 100%;
 }
 
 #home #newsletter-div input[type="email"]{
-	min-width: 300px;
-	width: 50%;
+	/*min-width: 300px;*/
+	/*width: 50%;*/
+	box-sizing: border-box;
 }
 
 #home footer{
@@ -606,5 +609,16 @@ header.top #nav .nav-li a{
 	}
 	#home footer #contact-group {
 		right: -21px;
+	}
+	#home #newsletter-div{
+		padding: 30px 20px;
+	}
+	#home #newsletter-div input{
+		width: initial;
+	}
+
+	#home #newsletter-div input[type="email"]{
+		/*min-width: 300px;*/
+		width: 50%;
 	}
 }
